--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.7.1",
     "mysql": "^2.18.1",
     "mysql-client": "^0.3.0",
     "mysql-server": "^1.0.5",
@@ -31,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "style-loader": "^4.0.0",
+    "supabase": "^1.204.3",
     "swiper": "^11.1.14"
   },
   "version": "1.0.0",
