--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node": "^22.3.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "style-loader": "^4.0.0",
